--- a/SuperGameEngine/SuperGameEngine/packages.config
+++ b/SuperGameEngine/SuperGameEngine/packages.config
@@ -2,4 +2,8 @@
 <packages>
   <package id="sdl2.nuget" version="2.30.9" targetFramework="native" />
   <package id="sdl2.nuget.redist" version="2.30.9" targetFramework="native" />
+  <package id="sdl2_image.nuget" version="2.8.2" targetFramework="native" />
+  <package id="sdl2_image.nuget.redist" version="2.8.2" targetFramework="native" />
+  <package id="sdl2_mixer.nuget" version="2.8.0" targetFramework="native" />
+  <package id="sdl2_mixer.nuget.redist" version="2.8.0" targetFramework="native" />
 </packages>
