Added more control to Engine and Window over how to handle restarts.

--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <ClInclude Include="EngineEntry\Engine.h" />
     <ClInclude Include="EngineEntry\EngineEntry.h" />
+    <ClInclude Include="EngineEntry\WindowExit.h" />
     <ClInclude Include="Engine\MainEngine.h" />
   </ItemGroup>
   <ItemGroup>
