--- a/FatedQuest.Libraries/StandardOperations/StandardOperations.vcxproj
+++ b/FatedQuest.Libraries/StandardOperations/StandardOperations.vcxproj
@@ -159,6 +159,11 @@
     </ClCompile>
     <ClCompile Include="StandardOperations.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StandardObjects\StandardObjects.vcxproj">
+      <Project>{3f3ccd80-0310-46b9-a963-285eac938cd6}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
