--- a/FatedQuest.Libraries/StandardOperations/StandardOperations.vcxproj.filters
+++ b/FatedQuest.Libraries/StandardOperations/StandardOperations.vcxproj.filters
@@ -54,4 +54,7 @@
       <Filter>Source Files\FileHandling</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
